--- a/Floride.html
+++ b/Floride.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floride</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.responsive.css">
 </head>
 <body>
-    <header>
+    <header class="hide">
         <nav>
-            <img src="/img/logo.png" alt="logo" class="logo">
+            <img src="img/logo.png" alt="logo" class="logo">
             <ul>
                 <li>
                     <a href="#">Floride</a>
@@ -35,15 +36,17 @@
     </header>
 
     <main>
-        <div class="vignette"></div>
-        <img src="/img/backgroundFilterMiami.png" class="parallax backgroundFilterMiami">
-        <div class="text parallax">
+        <div class="vignette hide"></div>
+        <img src="img/backgroundFilterMiami.png" data-distance="-200" data-speedx="0.3" data-speedy="0.38" data-speedz="0" data-rotation="0" class="parallax backgroundFilterMiami">
+        <div class="text parallax" data-speedx="0.25" data-speedy="0.33" data-speedz="0.1" data-rotation="0.15">
             <h2>Floride</h2>
             <h1>Miami</h1>
         </div>
-        <img src="/img/miamiBgFilter.png" class="parallax miamiBgFilter">
+        <img src="img/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28" data-speedz="0.2" data-rotation="0.2" class="parallax miamiBgFilter">
     </main>
+
 </body>
 </html>
 
-<script src="/js/parallax.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+<script src="js/parallax.js"></script>
