--- a/Floride.html
+++ b/Floride.html
@@ -13,7 +13,7 @@
             <img src="img/logo.png" alt="logo" class="logo">
             <ul>
                 <li>
-                    <a href="#">Floride</a>
+                    <a href="Floride.html">Floride</a>
                 </li>
                 <li>
                     <a href="#">test</a>
@@ -23,13 +23,6 @@
                 </li>
                 <li>
                     <a href="#">test</a>
-                </li>
-                <li class="menuBurger">
-                    <a href="#">
-                        <div class="menu">
-
-                        </div>
-                    </a>
                 </li>
             </ul>
         </nav>
@@ -44,6 +37,7 @@
         </div>
         <img src="img/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28" data-speedz="0.2" data-rotation="0.2" class="parallax miamiBgFilter">
     </main>
+    <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ea dolor ullam earum ratione, quaerat consequuntur dolorem ab sunt. Doloribus sunt earum, nostrum architecto eveniet facilis at similique dolore eum!</p> -->
 
 </body>
 </html>
