--- a/Floride.html
+++ b/Floride.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floride</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style.responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
 <body>
     <header class="hide">
@@ -16,13 +18,10 @@
                     <a href="Floride.html">Floride</a>
                 </li>
                 <li>
-                    <a href="#">test</a>
+                    <a href="#">Paris</a>
                 </li>
                 <li>
-                    <a href="#">test</a>
-                </li>
-                <li>
-                    <a href="#">test</a>
+                    <a href="#">Rome</a>
                 </li>
             </ul>
         </nav>
@@ -37,10 +36,134 @@
         </div>
         <img src="img/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28" data-speedz="0.2" data-rotation="0.2" class="parallax miamiBgFilter">
     </main>
-    <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ea dolor ullam earum ratione, quaerat consequuntur dolorem ab sunt. Doloribus sunt earum, nostrum architecto eveniet facilis at similique dolore eum!</p> -->
+    <div class="main-content">
+        <div class="row d-flex justify-content-center text-center">
+            <h1 class="title">Miami et sa richesse culturelle incomparable !</h1>
+            <p class="iconP">
+                <img src="/img/etats-unis.png" alt="Drapeau USA" class="iconTitle">
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-md-6 meteo">
+                <div class="col-xs-6">
+                    <h2>Miami<br><small>May 24, 2016</small></h2>
+                    <p class="h3"><i class="mi mi-fw mi-lg mi-rain-heavy"></i> Rainy</p>
+                </div>
+                <div class="col-xs-6">
+                    <div class="h1 temperature">
+                        <span>12°</span>
+                        <br>
+                        <small>8° / 13°</small>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <ul>
+                        <li>
+                            <h3 class="h5">Wed</h3>
+                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                        </li>
+                        <li>
+                            <h3 class="h5">Wed</h3>
+                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                        </li>
+                        <li>
+                            <h3 class="h5">Wed</h3>
+                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                        </li>
+                        <li>
+                            <h3 class="h5">Wed</h3>
+                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                        </li>
+                        <li>
+                            <h3 class="h5">Wed</h3>
+                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                        </li>
+                        <li>
+                            <h3 class="h5">Wed</h3>
+                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6 data">
+                <div class="row">
+                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                        <div class="card">
+                            <div class="card-body p-3">
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant</p>
+                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
+                                    </div>
+                                    <div class="col-4 text-end">
+                                        <div class="card">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                        <div class="card">
+                            <div class="card-body p-3">
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Valeur du Dollar</p>
+                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
+                                    </div>
+                                    <div class="col-4 text-end">
+                                        <div class="card">
+                                            <i class="bi bi-currency-exchange"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                        <div class="card">
+                            <div class="card-body p-3">
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
+                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Floride, État-Unis</h5>
+                                    </div>
+                                    <div class="col-4 text-end">
+                                        <div class="card">
+                                            <i class="bi bi-globe-americas"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                        <div class="card">
+                            <div class="card-body p-3">
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Superficie</p>
+                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">143,1 km²</h5>
+                                    </div>
+                                    <div class="col-4 text-end">
+                                        <div class="card">
+                                            <i class="bi bi-arrows-angle-expand"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="js/parallax.js"></script>
+<script src="js/meteo.js"></script>
+<script src="js/money.js"></script>
