--- a/Floride.html
+++ b/Floride.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
 </head>
-<body>
+<body style="background-color: #f8f9fa;">
     <header class="hide">
         <nav>
             <img src="img/logo.png" alt="logo" class="logo">
@@ -43,112 +43,118 @@
                 <img src="/img/etats-unis.png" alt="Drapeau USA" class="iconTitle">
             </p>
         </div>
-        <div class="row">
-            <div class="col-xs-12 col-md-6 meteo">
-                <div class="col-xs-6">
-                    <h2>Miami<br><small>May 24, 2016</small></h2>
-                    <p class="h3"><i class="mi mi-fw mi-lg mi-rain-heavy"></i> Rainy</p>
-                </div>
-                <div class="col-xs-6">
-                    <div class="h1 temperature">
-                        <span>12°</span>
-                        <br>
-                        <small>8° / 13°</small>
+        <div class="container">
+            <div class="row allData">
+                <div class="col-xs-12 col-md-4 meteo">
+                    <div class="row firstPartMeteo">
+                        <div class="col">
+                            <h2 class="d-flex flex-column">Miami<small>May 24, 2016</small></h2>
+                            <p class="h3">Rainy</p>
+                        </div>
+                        <div class="col">
+                            <div class="h1 temperature">
+                                <span>12°</span>
+                                <small>8° (min) / 13° (max)</small>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <ul class="prevMeteo">
+                                <li>
+                                    <h3 class="h5">Wed</h3>
+                                    <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                                </li>
+                                <li>
+                                    <h3 class="h5">Wed</h3>
+                                    <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                                </li>
+                                <li>
+                                    <h3 class="h5">Wed</h3>
+                                    <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                                </li>
+                                <li>
+                                    <h3 class="h5">Wed</h3>
+                                    <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                                </li>
+                                <li>
+                                    <h3 class="h5">Wed</h3>
+                                    <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                                </li>
+                                <li>
+                                    <h3 class="h5">Wed</h3>
+                                    <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12">
-                    <ul>
-                        <li>
-                            <h3 class="h5">Wed</h3>
-                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
-                        </li>
-                        <li>
-                            <h3 class="h5">Wed</h3>
-                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
-                        </li>
-                        <li>
-                            <h3 class="h5">Wed</h3>
-                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
-                        </li>
-                        <li>
-                            <h3 class="h5">Wed</h3>
-                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
-                        </li>
-                        <li>
-                            <h3 class="h5">Wed</h3>
-                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
-                        </li>
-                        <li>
-                            <h3 class="h5">Wed</h3>
-                            <p><i class="mi mi-fw mi-2x mi-cloud-sun"></i><br>9°/18°</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6 data">
-                <div class="row">
-                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                        <div class="card">
-                            <div class="card-body p-3">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant</p>
-                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
-                                    </div>
-                                    <div class="col-4 text-end">
-                                        <div class="card">
-                                            <i class="bi bi-people"></i>
+                <div class="col-xs-12 col-md-6 data">
+                    <div class="row">
+                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                            <div class="card">
+                                <div class="card-body p-3">
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant</p>
+                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
+                                        </div>
+                                        <div class="col-4 d-flex justify-content-end">
+                                            <div class="boxIcon">
+                                               <img src="img/svg/people.svg">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                        <div class="card">
-                            <div class="card-body p-3">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Valeur du Dollar</p>
-                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
-                                    </div>
-                                    <div class="col-4 text-end">
-                                        <div class="card">
-                                            <i class="bi bi-currency-exchange"></i>
+                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                            <div class="card">
+                                <div class="card-body p-3">
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Valeur du Dollar</p>
+                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
+                                        </div>
+                                        <div class="col-4 d-flex justify-content-end">
+                                            <div class="boxIcon">
+                                                <img src="img/svg/currency-exchange.svg">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                        <div class="card">
-                            <div class="card-body p-3">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
-                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Floride, État-Unis</h5>
-                                    </div>
-                                    <div class="col-4 text-end">
-                                        <div class="card">
-                                            <i class="bi bi-globe-americas"></i>
+                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                            <div class="card">
+                                <div class="card-body p-3">
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
+                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Floride, État-Unis</h5>
+                                        </div>
+                                        <div class="col-4 d-flex justify-content-end">
+                                            <div class="boxIcon">
+                                                <img src="img/svg/globe-americas.svg">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                        <div class="card">
-                            <div class="card-body p-3">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Superficie</p>
-                                        <h5 class="text-sm mb-0 text-capitalize font-weight-bold">143,1 km²</h5>
-                                    </div>
-                                    <div class="col-4 text-end">
-                                        <div class="card">
-                                            <i class="bi bi-arrows-angle-expand"></i>
+                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
+                            <div class="card">
+                                <div class="card-body p-3">
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Superficie</p>
+                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">143,1 km²</h5>
+                                        </div>
+                                        <div class="col-4 d-flex justify-content-end">
+                                            <div class="boxIcon">
+                                               <img src="img/svg/arrows-angle-expand.svg">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
