--- a/Floride.html
+++ b/Floride.html
@@ -136,9 +136,9 @@
             </p>
         </div>
         <div class="container">
-            <div class="row align-items-center justify-content-around">
+            <div class="row align-items-center justify-content-around location">
                 <div class="col-lg-5">
-                    <h1 class="title" data-aos="fade-up" data-aos-duration="1200">Miami Beach</h1>
+                    <h1 class="title left" data-aos="fade-up" data-aos-duration="1200">Miami Beach</h1>
                     <p data-aos="fade-up" data-aos-duration="1200">Miami Beach est un véritable paradis tropical où le
                         soleil ne cesse jamais de briller. Imaginez une
                         étendue de sable blanc et fin, bordée par des eaux turquoise cristallines qui invitent à la
@@ -151,7 +151,7 @@
                         étoiles,
                         bercé par les rythmes envoûtants de la musique latine et électronique.</p>
                     <p data-aos="fade-up" data-aos-duration="1200">
-                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Miami_Beach">Voir plus</a>
+                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Miami_Beach">En savoir plus <img src="img/svg/arrow-right-solid.svg"></a>
                     </p>
                 </div>
                 <div class="col-lg-6">
@@ -161,14 +161,25 @@
                                 alt="Poste des secours de Miami Beach">
                         </div>
                         <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/miamiBeach2.jpg" class="illustration" alt="Vue de haut de Miami Beach">
+                            <img src="img/Miami/miamiBeach2.png" class="illustration" alt="Vue de haut de Miami Beach">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center justify-content-around">
+            <div class="row align-items-center justify-content-around location">
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/everglades1.jpg" class="illustration"
+                                alt="Poste des secours de Miami Beach">
+                        </div>
+                        <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/everglades2.jpg" class="illustration" alt="Vue de haut de Miami Beach">
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-5">
-                    <h1 class="title" data-aos="fade-up" data-aos-duration="1200">EverGlades</h1>
+                    <h1 class="title text-end right" data-aos="fade-up" data-aos-duration="1200">EverGlades</h1>
                     <p data-aos="fade-up" data-aos-duration="1200">Les Everglades sont un écosystème unique et
                         fascinant, souvent appelé le "Rivière d'herbe". C'est une vaste étendue de marais subtropicaux,
                         abritant une biodiversité exceptionnelle. Imaginez des eaux tranquilles recouvertes de
@@ -178,25 +189,15 @@
                         pourrez observer de près des espèces rares et menacées, comme le lamantin et le panthère de
                         Floride. Les randonnées et les promenades en canoë offrent également une perspective intime de
                         ce paysage sauvage.</p>
-                    <p data-aos="fade-up" data-aos-duration="1200">
-                        <a target="_blank" class="more"
-                            href="https://fr.wikipedia.org/wiki/Parc_national_des_Everglades">Voir plus</a>
+                    <p data-aos="fade-up" data-aos-duration="1200" class="d-flex justify-content-end">
+                        <a target="_blank" class="more left"
+                            href="https://fr.wikipedia.org/wiki/Parc_national_des_Everglades"><img src="img/svg/arrow-left-solid.svg"> En savoir plus</a>
                     </p>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/miamiBeach1.jpg" class="illustration"
-                                alt="Poste des secours de Miami Beach">
-                        </div>
-                        <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/miamiBeach2.jpg" class="illustration" alt="Vue de haut de Miami Beach">
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <a href="#" class="scrollToTop"><img src="img/svg/circle-up-regular.svg" alt=""></a>
 </body>
 
 </html>
