add footer page

--- a/Floride.html
+++ b/Floride.html
@@ -151,7 +151,8 @@
                         étoiles,
                         bercé par les rythmes envoûtants de la musique latine et électronique.</p>
                     <p data-aos="fade-up" data-aos-duration="1200">
-                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Miami_Beach">En savoir plus <img src="img/svg/arrow-right-solid.svg"></a>
+                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Miami_Beach">En savoir plus
+                            <img src="img/svg/arrow-right-solid.svg"></a>
                     </p>
                 </div>
                 <div class="col-lg-6">
@@ -170,11 +171,10 @@
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/everglades1.jpg" class="illustration"
-                                alt="Poste des secours de Miami Beach">
+                            <img src="img/Miami/everglades1.jpg" class="illustration" alt="Crocodiles">
                         </div>
                         <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/everglades2.jpg" class="illustration" alt="Vue de haut de Miami Beach">
+                            <img src="img/Miami/everglades2.jpg" class="illustration" alt="Panneau danger !">
                         </div>
                     </div>
                 </div>
@@ -191,8 +191,26 @@
                         ce paysage sauvage.</p>
                     <p data-aos="fade-up" data-aos-duration="1200" class="d-flex justify-content-end">
                         <a target="_blank" class="more left"
-                            href="https://fr.wikipedia.org/wiki/Parc_national_des_Everglades"><img src="img/svg/arrow-left-solid.svg"> En savoir plus</a>
+                            href="https://fr.wikipedia.org/wiki/Parc_national_des_Everglades"><img
+                                src="img/svg/arrow-left-solid.svg"> En savoir plus</a>
                     </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="second-content">
+        <h2 class="titleVignette">Key West</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1 class="title">EverGlades</h1>
+                    <p >Les Everglades sont un écosystème unique et
+                        fascinant, souvent appelé le "Rivière d'herbe". C'est une vaste étendue de marais subtropicaux,
+                        abritant une biodiversité exceptionnelle. Imaginez des eaux tranquilles recouvertes de
+                        végétation luxuriante, où alligators et oiseaux exotiques vivent en harmonie.</p>
+                </div>
+                <div class="col-lg-6">
+                    <img src="img/Miami/keyWest1.jpg" alt="" style="width: 23rem;">
                 </div>
             </div>
         </div>
@@ -200,11 +218,27 @@
     <a href="#" class="scrollToTop"><img src="img/svg/circle-up-regular.svg" alt=""></a>
 </body>
 
+<footer>
+    <img src="img/footer.png" alt="Image Footer">
+    <div class="content-footer">
+        <p class="lienFooter">
+            <a href="https://thomasl28500.github.io/Portfolio/" target="_blank">
+                <img src="img/svg/globe-solid.svg" alt="Portfolio">
+            </a>
+            <a href="https://github.com/thomasl28500" target="_blank">
+                <img src="img/svg/github.svg" alt="Github">
+            </a>
+            <a href="https://www.linkedin.com/in/thomas-letellier-812880268/" target="_blank">
+                <img src="img/svg/linkedin.svg" alt="Linkedin">
+            </a>
+        </p>
+        <p class="copyright">@Copyright. All rights reserved.</p>
+    </div>
+</footer>
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="js/parallax.js"></script>
 <script src="js/meteo.js"></script>
-<!-- <script src="js/money.js"></script> -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
