add Galerie + End CSS Galerie

--- a/Miami.html
+++ b/Miami.html
@@ -19,7 +19,7 @@
             <img src="img/logo.png" alt="logo" class="logo">
             <ul>
                 <li>
-                    <a href="Floride.html">Floride</a>
+                    <a href="Miami.html">Miami</a>
                 </li>
                 <li>
                     <a href="#">Paris</a>
@@ -198,19 +198,68 @@
             </div>
         </div>
     </div>
-    <div class="second-content">
-        <h2 class="titleVignette">Key West</h2>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h1 class="title">EverGlades</h1>
-                    <p >Les Everglades sont un écosystème unique et
-                        fascinant, souvent appelé le "Rivière d'herbe". C'est une vaste étendue de marais subtropicaux,
-                        abritant une biodiversité exceptionnelle. Imaginez des eaux tranquilles recouvertes de
-                        végétation luxuriante, où alligators et oiseaux exotiques vivent en harmonie.</p>
+    <div class="imgParallax Miami">
+        <div class="citation" data-aos="fade-left" data-aos-duration="1200">
+            <div class="quote">
+                <img src="img/svg/quote.svg" alt="icon quote">
+            </div>
+            <p>" Party in the city where the heat is on, all night on the beach till the break of dawn. Welcome to Miami."<span class="auteur">Will Smith.</span></p>
+        </div>
+    </div>
+    <div class="main-content secondContent">
+        <div class="row d-flex justify-content-center text-center">
+            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Miami, un Univers d'Expériences Sans Fin à Explorer
+            </h1>
+            <p class="iconP" data-aos="fade-up" data-aos-duration="1000">
+                <img src="img/Miami/iconVoyage.png" alt="Icone de voyage" class="iconTitle">
+            </p>
+        </div>
+    </div>
+    <div class="section-galerie">
+        <div class="galerie">
+            <div class="grandeImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/keyBiscayne.png" alt="Key Biscayne">
                 </div>
-                <div class="col-lg-6">
-                    <img src="img/Miami/keyWest1.jpg" alt="" style="width: 23rem;">
+                <div class="textGalerie">
+                    <h3>Key Biscayne</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Key_Biscayne" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/artDeco1.jpg" alt="Art Déco Miami">
+                </div>
+                <div class="textGalerie">
+                    <h3>Art Déco</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Architecture_Art_d%C3%A9co_de_Miami" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/keyWest1.jpg" alt="Key West">
+                </div>
+                <div class="textGalerie">
+                    <h3>Key West</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Key_West" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/southBeach.jpg" alt="South Beach Miami">
+                </div>
+                <div class="textGalerie">
+                    <h3>South Beach - Miami</h3>
+                    <a href="https://fr.wikipedia.org/wiki/South_Beach" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/wynwood.webp" alt="WynWood Miami">
+                </div>
+                <div class="textGalerie">
+                    <h3>WynWood - Miami</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Wynwood" target="_blank" class="more">En savoir plus</a>
                 </div>
             </div>
         </div>
