Start Responsive design + Create other HTML page

--- a/Miami.html
+++ b/Miami.html
@@ -19,13 +19,13 @@
             <img src="img/logo.png" alt="logo" class="logo">
             <ul>
                 <li>
-                    <a href="Miami.html">Miami</a>
+                    <a href="Miami.html" class="active">Miami</a>
                 </li>
                 <li>
-                    <a href="#">Paris</a>
+                    <a href="Paris.html">Paris</a>
                 </li>
                 <li>
-                    <a href="#">Rome</a>
+                    <a href="Rome.html">Rome</a>
                 </li>
             </ul>
         </nav>
