--- a/Paris.html
+++ b/Paris.html
@@ -1,1 +1,293 @@
-<p>Page en construction ðŸš§</p>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paris</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+</head>
+
+<body style="background-color: #f8f9fa;">
+    <header class="hide">
+        <nav>
+            <img src="img/logo.png" alt="logo" class="logo">
+            <ul>
+                <li>
+                    <a href="Miami.html">Miami</a>
+                </li>
+                <li>
+                    <a href="Paris.html" class="active">Paris</a>
+                </li>
+                <li>
+                    <a href="Rome.html">Rome</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="vignette hide"></div>
+        <img src="img/Miami/backgroundFilterMiami.png" data-distance="-200" data-speedx="0.3" data-speedy="0.38"
+            data-speedz="0" data-rotation="0" class="parallax backgroundFilterMiami">
+        <div class="text parallax" data-speedx="0.25" data-speedy="0.33" data-speedz="0.1" data-rotation="0.15">
+            <h2>Île-de-France</h2>
+            <h1 class="city">Paris</h1>
+        </div>
+        <img src="img/Miami/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28"
+            data-speedz="0.2" data-rotation="0.2" class="parallax miamiBgFilter">
+    </main>
+    <div class="mini-card">
+        <div class="container allData">
+            <div class="row">
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Île-de-France, France
+                                    </h5>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img src="img/svg/globe-americas.svg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant
+                                        (2024)</p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">2,161 millions</h5>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img src="img/svg/people.svg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Superficie</p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">105,40 km2</h5>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img src="img/svg/superficie.svg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold temperature">
+                                        <small>
+                                            <img src="img/svg/arrow-down-solid.svg" alt="">
+                                            <span class="min-temp"></span>
+                                            <span class="separateur"> | </span>
+                                            <span class="max-temp"></span>
+                                            <img src="img/svg/arrow-up-solid.svg" alt="">
+                                        </small>
+                                    </p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold"><span
+                                            class="current-temp"></span></h5>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img class="weather" src="img/svg/weather.svg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="row d-flex justify-content-center text-center">
+            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Paris, la ville de l'amour !
+            </h1>
+            <p class="iconP" data-aos="fade-up" data-aos-duration="1000">
+                <img src="img/Paris/francepng" alt="Drapeau USA" class="iconTitle">
+            </p>
+        </div>
+        <div class="container">
+            <div class="row align-items-center justify-content-around location">
+                <div class="col-lg-5">
+                    <h1 class="title left" data-aos="fade-up" data-aos-duration="1200">Miami Beach</h1>
+                    <p data-aos="fade-up" data-aos-duration="1200">Miami Beach est un véritable paradis tropical où le
+                        soleil ne cesse jamais de briller. Imaginez une
+                        étendue de sable blanc et fin, bordée par des eaux turquoise cristallines qui invitent à la
+                        baignade. C'est un endroit où le glamour et l'énergie vibrante de la vie nocturne se mêlent
+                        harmonieusement à la tranquillité des plages et à la douceur de vivre.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">Lorsque la nuit tombe, Miami Beach se transforme en
+                        un épicentre de fête. Les clubs de renommée
+                        mondiale attirent des DJs et des célébrités, tandis que les bars sur les toits offrent des vues
+                        imprenables sur l'horizon illuminé de la ville. Vous pourrez danser jusqu'à l'aube sous les
+                        étoiles,
+                        bercé par les rythmes envoûtants de la musique latine et électronique.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">
+                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Miami_Beach">En savoir plus
+                            <img src="img/svg/arrow-right-solid.svg"></a>
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/miamiBeach1.jpg" class="illustration"
+                                alt="Poste des secours de Miami Beach">
+                        </div>
+                        <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/miamiBeach2.png" class="illustration" alt="Vue de haut de Miami Beach">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-around location">
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/everglades1.jpg" class="illustration" alt="Crocodiles">
+                        </div>
+                        <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/everglades2.jpg" class="illustration" alt="Panneau danger !">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <h1 class="title text-end right" data-aos="fade-up" data-aos-duration="1200">EverGlades</h1>
+                    <p data-aos="fade-up" data-aos-duration="1200">Les Everglades sont un écosystème unique et
+                        fascinant, souvent appelé le "Rivière d'herbe". C'est une vaste étendue de marais subtropicaux,
+                        abritant une biodiversité exceptionnelle. Imaginez des eaux tranquilles recouvertes de
+                        végétation luxuriante, où alligators et oiseaux exotiques vivent en harmonie.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">Explorez ce sanctuaire naturel à bord d'un
+                        hydroglisseur, glissant à travers des prairies inondées et des mangroves mystérieuses. Vous
+                        pourrez observer de près des espèces rares et menacées, comme le lamantin et le panthère de
+                        Floride. Les randonnées et les promenades en canoë offrent également une perspective intime de
+                        ce paysage sauvage.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200" class="d-flex justify-content-end">
+                        <a target="_blank" class="more left"
+                            href="https://fr.wikipedia.org/wiki/Parc_national_des_Everglades"><img
+                                src="img/svg/arrow-left-solid.svg"> En savoir plus</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="imgParallax Miami">
+        <div class="citation" data-aos="fade-left" data-aos-duration="1200">
+            <div class="quote">
+                <img src="img/svg/quote.svg" alt="icon quote">
+            </div>
+            <p>" Party in the city where the heat is on, all night on the beach till the break of dawn. Welcome to Miami."<span class="auteur">Will Smith.</span></p>
+        </div>
+    </div>
+    <div class="main-content secondContent">
+        <div class="row d-flex justify-content-center text-center">
+            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Miami, un Univers d'Expériences Sans Fin à Explorer
+            </h1>
+            <p class="iconP" data-aos="fade-up" data-aos-duration="1000">
+                <img src="img/Miami/iconVoyage.png" alt="Icone de voyage" class="iconTitle">
+            </p>
+        </div>
+    </div>
+    <div class="section-galerie">
+        <div class="galerie">
+            <div class="grandeImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/keyBiscayne.png" alt="Key Biscayne">
+                </div>
+                <div class="textGalerie">
+                    <h3>Key Biscayne</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Key_Biscayne" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/artDeco1.jpg" alt="Art Déco Miami">
+                </div>
+                <div class="textGalerie">
+                    <h3>Art Déco</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Architecture_Art_d%C3%A9co_de_Miami" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/keyWest1.jpg" alt="Key West">
+                </div>
+                <div class="textGalerie">
+                    <h3>Key West</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Key_West" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/southBeach.jpg" alt="South Beach Miami">
+                </div>
+                <div class="textGalerie">
+                    <h3>South Beach - Miami</h3>
+                    <a href="https://fr.wikipedia.org/wiki/South_Beach" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+            <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
+                <div class="image">
+                    <img src="img/Miami/wynwood.webp" alt="WynWood Miami">
+                </div>
+                <div class="textGalerie">
+                    <h3>WynWood - Miami</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Wynwood" target="_blank" class="more">En savoir plus</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a href="#" class="scrollToTop"><img src="img/svg/circle-up-regular.svg" alt=""></a>
+</body>
+
+<footer>
+    <img src="img/footer.png" alt="Image Footer">
+    <div class="content-footer">
+        <p class="lienFooter">
+            <a href="https://thomasl28500.github.io/Portfolio/" target="_blank">
+                <img src="img/svg/globe-solid.svg" alt="Portfolio">
+            </a>
+            <a href="https://github.com/thomasl28500" target="_blank">
+                <img src="img/svg/github.svg" alt="Github">
+            </a>
+            <a href="https://www.linkedin.com/in/thomas-letellier-812880268/" target="_blank">
+                <img src="img/svg/linkedin.svg" alt="Linkedin">
+            </a>
+        </p>
+        <p class="copyright">@Copyright. All rights reserved.</p>
+    </div>
+</footer>
+</html>
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+<script src="js/parallax.js"></script>
+<script src="js/meteo.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>
