--- a/Paris.html
+++ b/Paris.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paris</title>
+    <title>Floride</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style.responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -36,7 +36,7 @@
         <img src="img/Miami/backgroundFilterMiami.png" data-distance="-200" data-speedx="0.3" data-speedy="0.38"
             data-speedz="0" data-rotation="0" class="parallax backgroundFilterMiami">
         <div class="text parallax" data-speedx="0.25" data-speedy="0.33" data-speedz="0.1" data-rotation="0.15">
-            <h2>Île-de-France</h2>
+            <h2>ÃŽle-de-France</h2>
             <h1 class="city">Paris</h1>
         </div>
         <img src="img/Miami/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28"
@@ -51,7 +51,7 @@
                             <div class="row">
                                 <div class="col-8">
                                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
-                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Île-de-France, France
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">ÃŽle-de-France, France
                                     </h5>
                                 </div>
                                 <div class="col-4 d-flex justify-content-end">
@@ -87,7 +87,7 @@
                             <div class="row">
                                 <div class="col-8">
                                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Superficie</p>
-                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">105,40 km2</h5>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">105,40 kmÂ²</h5>
                                 </div>
                                 <div class="col-4 d-flex justify-content-end">
                                     <div class="boxIcon">
@@ -132,37 +132,35 @@
             <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Paris, la ville de l'amour !
             </h1>
             <p class="iconP" data-aos="fade-up" data-aos-duration="1000">
-                <img src="img/Paris/francepng" alt="Drapeau USA" class="iconTitle">
+                <img src="img/Paris/france.png" alt="Drapeau USA" class="iconTitle">
             </p>
         </div>
         <div class="container">
             <div class="row align-items-center justify-content-around location">
                 <div class="col-lg-5">
-                    <h1 class="title left" data-aos="fade-up" data-aos-duration="1200">Miami Beach</h1>
-                    <p data-aos="fade-up" data-aos-duration="1200">Miami Beach est un véritable paradis tropical où le
-                        soleil ne cesse jamais de briller. Imaginez une
-                        étendue de sable blanc et fin, bordée par des eaux turquoise cristallines qui invitent à la
-                        baignade. C'est un endroit où le glamour et l'énergie vibrante de la vie nocturne se mêlent
-                        harmonieusement à la tranquillité des plages et à la douceur de vivre.</p>
-                    <p data-aos="fade-up" data-aos-duration="1200">Lorsque la nuit tombe, Miami Beach se transforme en
-                        un épicentre de fête. Les clubs de renommée
-                        mondiale attirent des DJs et des célébrités, tandis que les bars sur les toits offrent des vues
-                        imprenables sur l'horizon illuminé de la ville. Vous pourrez danser jusqu'à l'aube sous les
-                        étoiles,
-                        bercé par les rythmes envoûtants de la musique latine et électronique.</p>
+                    <h1 class="title left" data-aos="fade-up" data-aos-duration="1200">La Tour Eiffel</h1>
+                    <p data-aos="fade-up" data-aos-duration="1200">La Tour Eiffel, emblÃ¨me emblÃ©matique de Paris, est
+                        bien plus qu'une simple structure en fer. Dominant la ligne d'horizon parisienne, cette
+                        merveille architecturale attire des millions de visiteurs chaque annÃ©e. Imaginez-vous montant
+                        ses Ã©tages pour dÃ©couvrir une vue panoramique Ã  couper le souffle sur la ville des lumiÃ¨res, ses
+                        monuments historiques et ses charmants quartiers.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">Que vous choisissiez de monter jusqu'au sommet ou de
+                        simplement admirer sa grandeur depuis les berges de la Seine, la Tour Eiffel promet une
+                        multitude d'expÃ©riences inoubliables. C'est un monument vivant, toujours prÃªt Ã  vous offrir de
+                        nouvelles perspectives et des moments magiques dans le cÅ“ur de Paris.</p>
                     <p data-aos="fade-up" data-aos-duration="1200">
-                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Miami_Beach">En savoir plus
+                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Tour_Eiffel">En savoir plus
                             <img src="img/svg/arrow-right-solid.svg"></a>
                     </p>
                 </div>
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/miamiBeach1.jpg" class="illustration"
-                                alt="Poste des secours de Miami Beach">
+                            <img src="img/Paris/tourEiffel1.jpg" class="illustration"
+                                alt="Image de la Tour Eiffel 1">
                         </div>
                         <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/miamiBeach2.png" class="illustration" alt="Vue de haut de Miami Beach">
+                            <img src="img/Paris/tourEiffel2.jpg" class="illustration" alt="Image de la Tour Eiffel 2">
                         </div>
                     </div>
                 </div>
@@ -171,27 +169,27 @@
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/everglades1.jpg" class="illustration" alt="Crocodiles">
+                            <img src="img/Paris/arcTriomphe1.jpg" class="illustration" alt="Crocodiles">
                         </div>
                         <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Miami/everglades2.jpg" class="illustration" alt="Panneau danger !">
+                            <img src="img/Paris/arcTriomphe2.jpg" class="illustration" alt="Panneau danger !">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <h1 class="title text-end right" data-aos="fade-up" data-aos-duration="1200">EverGlades</h1>
-                    <p data-aos="fade-up" data-aos-duration="1200">Les Everglades sont un écosystème unique et
-                        fascinant, souvent appelé le "Rivière d'herbe". C'est une vaste étendue de marais subtropicaux,
-                        abritant une biodiversité exceptionnelle. Imaginez des eaux tranquilles recouvertes de
-                        végétation luxuriante, où alligators et oiseaux exotiques vivent en harmonie.</p>
-                    <p data-aos="fade-up" data-aos-duration="1200">Explorez ce sanctuaire naturel à bord d'un
-                        hydroglisseur, glissant à travers des prairies inondées et des mangroves mystérieuses. Vous
-                        pourrez observer de près des espèces rares et menacées, comme le lamantin et le panthère de
-                        Floride. Les randonnées et les promenades en canoë offrent également une perspective intime de
-                        ce paysage sauvage.</p>
+                    <h1 class="title text-end right" data-aos="fade-up" data-aos-duration="1200">L'Arc de Triomphe de
+                        L'Ã‰toile</h1>
+                    <p data-aos="fade-up" data-aos-duration="1200">L'Arc de Triomphe, majestueux symbole de l'histoire
+                        franÃ§aise, trÃ´ne fiÃ¨rement au centre de la Place Charles de Gaulle Ã  Paris. Ã‰rigÃ© en l'honneur
+                        des soldats qui ont combattu pour la France, ce monument colossal offre une plongÃ©e fascinante
+                        dans le passÃ© glorieux de la nation.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">Que vous soyez passionnÃ© d'histoire, amateur
+                        d'architecture ou simplement en quÃªte d'une vue panoramique sur Paris, l'Arc de Triomphe offre
+                        une multitude d'expÃ©riences riches et variÃ©es. C'est un lieu oÃ¹ le passÃ© et le prÃ©sent se
+                        rencontrent, offrant aux visiteurs une exploration sans fin de la grandeur de Paris.</p>
                     <p data-aos="fade-up" data-aos-duration="1200" class="d-flex justify-content-end">
                         <a target="_blank" class="more left"
-                            href="https://fr.wikipedia.org/wiki/Parc_national_des_Everglades"><img
+                            href="https://fr.wikipedia.org/wiki/Arc_de_triomphe_de_l'%C3%89toile"><img
                                 src="img/svg/arrow-left-solid.svg"> En savoir plus</a>
                     </p>
                 </div>
@@ -203,12 +201,13 @@
             <div class="quote">
                 <img src="img/svg/quote.svg" alt="icon quote">
             </div>
-            <p>" Party in the city where the heat is on, all night on the beach till the break of dawn. Welcome to Miami."<span class="auteur">Will Smith.</span></p>
+            <p>" Sauver Paris, câ€™est plus que sauver la France, câ€™est sauver le monde. "<span class="auteur">Victor Hugo.</span></p>
         </div>
     </div>
     <div class="main-content secondContent">
         <div class="row d-flex justify-content-center text-center">
-            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Miami, un Univers d'Expériences Sans Fin à Explorer
+            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Miami, un Univers d'ExpÃ©riences Sans Fin Ã 
+                Explorer
             </h1>
             <p class="iconP" data-aos="fade-up" data-aos-duration="1000">
                 <img src="img/Miami/iconVoyage.png" alt="Icone de voyage" class="iconTitle">
@@ -228,11 +227,12 @@
             </div>
             <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
                 <div class="image">
-                    <img src="img/Miami/artDeco1.jpg" alt="Art Déco Miami">
+                    <img src="img/Miami/artDeco1.jpg" alt="Art DÃ©co Miami">
                 </div>
                 <div class="textGalerie">
-                    <h3>Art Déco</h3>
-                    <a href="https://fr.wikipedia.org/wiki/Architecture_Art_d%C3%A9co_de_Miami" target="_blank" class="more">En savoir plus</a>
+                    <h3>Art DÃ©co</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Architecture_Art_d%C3%A9co_de_Miami" target="_blank"
+                        class="more">En savoir plus</a>
                 </div>
             </div>
             <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
@@ -284,6 +284,7 @@
         <p class="copyright">@Copyright. All rights reserved.</p>
     </div>
 </footer>
+
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
