add background page Paris

--- a/Paris.html
+++ b/Paris.html
@@ -24,23 +24,20 @@
                 <li>
                     <a href="Paris.html" class="active">Paris</a>
                 </li>
-                <li>
-                    <a href="Rome.html">Rome</a>
-                </li>
             </ul>
         </nav>
     </header>
 
     <main>
         <div class="vignette hide"></div>
-        <img src="img/Miami/backgroundFilterMiami.png" data-distance="-200" data-speedx="0.3" data-speedy="0.38"
-            data-speedz="0" data-rotation="0" class="parallax backgroundFilterMiami">
+        <img src="img/Paris/backgroundFilterParis.png" data-distance="-200" data-speedx="0.3" data-speedy="0.38"
+            data-speedz="0" data-rotation="0" class="parallax backgroundFilterParis">
         <div class="text parallax" data-speedx="0.25" data-speedy="0.33" data-speedz="0.1" data-rotation="0.15">
             <h2>Île-de-France</h2>
             <h1 class="city">Paris</h1>
         </div>
-        <img src="img/Miami/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28"
-            data-speedz="0.2" data-rotation="0.2" class="parallax miamiBgFilter">
+        <img src="img/Paris/parisBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28"
+            data-speedz="0.2" data-rotation="0.2" class="parallax parisBgFilter">
     </main>
     <div class="mini-card">
         <div class="container allData">
@@ -196,7 +193,7 @@
         </div>
     </div>
     <div class="imgParallax Paris">
-        <div class="citation" data-aos="fade-left" data-aos-duration="1200">
+        <div class="citation">
             <div class="quote">
                 <img src="img/svg/quote.svg" alt="icon quote">
             </div>
@@ -287,6 +284,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="js/parallax.js"></script>
+<script src="js/transitionCitation.js"></script>
 <script src="js/meteo.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
