--- a/Miami.html
+++ b/Miami.html
@@ -24,9 +24,6 @@
                 <li>
                     <a href="Paris.html">Paris</a>
                 </li>
-                <li>
-                    <a href="Rome.html">Rome</a>
-                </li>
             </ul>
         </nav>
     </header>
@@ -198,7 +195,7 @@
         </div>
     </div>
     <div class="imgParallax Miami">
-        <div class="citation" data-aos="fade-left" data-aos-duration="1200">
+        <div class="citation">
             <div class="quote">
                 <img src="img/svg/quote.svg" alt="icon quote">
             </div>
@@ -287,6 +284,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="js/parallax.js"></script>
+<script src="js/transitionCitation.js"></script>
 <script src="js/meteo.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
