--- a/Paris.html
+++ b/Paris.html
@@ -16,7 +16,9 @@
 <body style="background-color: #f8f9fa;">
     <header class="hide">
         <nav>
-            <img src="img/logo.png" alt="logo" class="logo">
+            <a href="Accueil.html">
+                <img src="img/logo.png" alt="logo" class="logo">
+            </a>
             <ul>
                 <li>
                     <a href="Miami.html">Miami</a>
