insert navbar in accueil.html

--- a/Accueil.html
+++ b/Accueil.html
@@ -12,24 +12,21 @@
 </head>
 
 <body style="background-color: #f8f9fa;">
-    <header class="hide">
-        <nav>
+    <header class="hide" style="background-color: #23282D;">
+        <nav class="navAccueil">
             <a href="Accueil.html">
                 <img src="img/logo.png" alt="logo" class="logo">
             </a>
             <ul>
                 <li>
-                    <a href="Miami.html" style="color: black;">Miami</a>
+                    <a href="Miami.html">Miami</a>
                 </li>
                 <li>
-                    <a href="Paris.html" class="active" style="color: black;">Paris</a>
+                    <a href="Paris.html">Paris</a>
                 </li>
             </ul>
         </nav>
     </header>
 </body>
-
-<footer>
-</footer>
 
 </html>
