add background home

--- a/Accueil.html
+++ b/Accueil.html
@@ -25,7 +25,7 @@
             <div class="line"></div>
         </div>
     </div>
-    <header class="hide headerHome" style="background-color: #23282D;">
+    <header class="hide headerHome">
         <nav class="navAccueil">
             <a href="Accueil.html">
                 <img src="img/logo.png" alt="logo" class="logo">
@@ -41,6 +41,13 @@
         </div>
     </header>
     <div class="accueilContent">
+        <div class="backgroundHome">
+            <img src="img/background-etoile.jpg" width="100%" height="auto" alt="">
+            <div class="contentBackground">
+                <h1>Les merveilles de notre extraordinaire planète</h1>
+                <p>Découvrez les lieux à ne pas manquer sur notre Terre !</p>
+            </div>
+        </div>
         <h1>Où souhaitez-vous aller ?</h1>
         <svg baseprofile="tiny" fill="#ececec" height="650" stroke="black" stroke-linecap="round"
             stroke-linejoin="round" stroke-width=".2" version="1.2" viewbox="0 0 2000 857" width="2000"
