navbar sticky scroll

--- a/Miami.html
+++ b/Miami.html
@@ -300,6 +300,7 @@
 <script src="js/parallax.js"></script>
 <script src="js/transitionCitation.js"></script>
 <script src="js/meteo.js"></script>
+<script src="js/navbarSticky.js"></script>
 <script src="js/loadPage.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
