--- a/Paris.html
+++ b/Paris.html
@@ -301,5 +301,6 @@
 <script src="js/transitionCitation.js"></script>
 <script src="js/meteo.js"></script>
 <script src="js/loadPage.js"></script>
+<script src="js/navbarSticky.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
